feat: Implement custom executor with timeout for HttpServer tasks